tests/lean/instance_cache1.lean.expected.out
instance_cache1.lean:3:2: error: failed to synthesize type class instance for
A : Type ?,
a : A,
this : has_add A
⊢ has_add A
instance_cache1.lean:1:11: warning: declaration 'f1' uses sorry
instance_cache1.lean:1:11: warning: declaration 'f1.equations._eqn_1' uses sorry
instance_cache1.lean:6:7: error: failed to synthesize type class instance for
A : Type ?,
a : A,
s : has_add A
⊢ has_add A
instance_cache1.lean:5:11: warning: declaration 'f2' uses sorry
instance_cache1.lean:5:11: warning: declaration 'f2.equations._eqn_1' uses sorry
instance_cache1.lean:9:19: error: failed to synthesize type class instance for
A : Type ?,
a : A,
s : has_add A
⊢ has_add A
instance_cache1.lean:8:11: warning: declaration 'f3' uses sorry
instance_cache1.lean:8:11: warning: declaration 'f3.equations._eqn_1' uses sorry
